# tewduwu-neon

./: .gitignore  CMakeLists.txt  README.md  copy_shaders.sh  macos_build.sh
assets/shaders/: blur_horizontal.wgsl  extract_bright.wgsl  neon_glow.wgsl
c/: .gitignore  CMakeLists.txt  CMakeLists.txt.sdl_test  README.md  macos_build.sh  sdl_test.cpp
c/src/: main.cpp
c/src/renderer/: Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  Vertex.h  VulkanContext.cpp  VulkanContext.h
c/src/shaders/: task.frag  task.vert  text.frag  text.vert
c/src/ui/: TaskListWidget.cpp  TaskListWidget.h
examples/: todo_ui_demo.rs
rust_rewrite/: .gitignore  Cargo.toml  README.md  plan.md
rust_rewrite/src/: main.rs
rust_rewrite/src/core/: todo_item.rs
rust_rewrite/src/shaders/: extract_bright.wgsl
rust_rewrite/src/ui/: button.rs  mod.rs  renderer.rs  text_input.rs  theme.rs  todo_item_widget.rs  todo_list_widget.rs
rust_rewrite/src/ui/widgets/: panel.rs
src/: lib.rs  main.cpp  main.rs
src/core/: TodoItem.cpp  TodoItem.h  TodoList.cpp  TodoList.h  mod.rs  todo_list.rs
src/renderer/: Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  VulkanContext.cpp  VulkanContext.h
src/shaders/: bloom_composite.wgsl  blur_vertical.wgsl  glass.frag  glass.vert
src/ui/: GlassPanel.cpp  GlassPanel.h  TaskListWidget.cpp  TaskListWidget.h  context.rs  mod.rs  panel.rs  renderer.rs
src/ui/widgets/: mod.rs
src/utils/: ResourceManager.cpp  ResourceManager.h
